kyy-k8s-config/dev/app/ssr/nuxt-kt/nuxt-kt-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuxt-kt
  name: nuxt-kt
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: nuxt-kt
